--- a/i3/config
+++ b/i3/config
@@ -11,6 +11,13 @@
 
 set $mod Mod4
 
+#colors
+set $bg-color #2f343f
+set $interactive-bg-color #2f343f
+set $text-color #f3f4f5
+set $interactive-text-color #676e7d
+set $urgent-bg-color #E53935
+
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:monospace 8
@@ -41,13 +48,13 @@ bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOU
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
-
+bindsym $mod+Return exec alacritty
 # kill focused window
 bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec --no-startup-id dmenu_run
+
 # A more modern dmenu replacement is rofi:
 # bindcode $mod+40 exec "rofi -modi drun,run -show drun"
 # There also is i3-dmenu-desktop which only displays applications shipping a
@@ -113,8 +120,8 @@ set $ws4 "4: Files"
 set $ws5 "5: Vlc Player"
 set $ws6 "6"
 set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
+set $ws8 "8: Telegram Desktop"
+set $ws9 "9: Spotify"
 set $ws10 "10: Settings"
 
 # switch to workspace
@@ -134,8 +141,9 @@ assign [class = "Code" ] $ws3
 assign [class = "firefox" ] $ws2
 assign [class = "Org.gnome.Nautilus"] $ws4
 assign [class = "vlc" ] $ws5
+assign [class = "TelegramDesktop" ] $ws8
+assign [class = "spotify" ] $ws9
 assign [class = "Gnome-control-center" ] $ws10
-
 
 for_window [class = Alacritty ] focus
 for_window [class = firefox ] focus
@@ -143,7 +151,7 @@ for_window [class = Code ] focus
 for_window [class = Org.gnome.Nautilus ] focus
 for_window [class = vlc ] focus
 for_window [class = Gnome-control-center ] focus
-
+for_window [class = TelegramDesktop ] focus
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
@@ -198,7 +206,7 @@ bar {
 	status_command i3blocks -c ~/.config/i3/i3blocks.conf
 }
 
-bindsym $mod+shift+x exec i3lock
+bindsym $mod+shift+x exec i3lock --color "#000000" 
 exec_always feh --bg-scale /home/aswinr/copy.jpg
 
 
