--- a/.config/i3/config
+++ b/.config/i3/config
@@ -113,16 +113,16 @@ bindsym $mod+a focus parent
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
-set $ws1 "1: Terminals"
+set $ws1 "1: Terminal"
 set $ws2 "2: Firefox"
 set $ws3 "3: VSCode"
 set $ws4 "4: Files"
 set $ws5 "5: Vlc Player"
-set $ws6 "6"
-set $ws7 "7"
+set $ws6 "6: Image Viewer"
+set $ws7 "7: Free Workspace "
 set $ws8 "8: Telegram Desktop"
-set $ws9 "9: Spotify"
-set $ws10 "10: Settings"
+set $ws9 "9: Pdf Reader"
+set $ws10 "10: Discord"
 
 # switch to workspace
 bindsym $mod+1 workspace number $ws1
@@ -141,9 +141,11 @@ assign [class = "Code" ] $ws3
 assign [class = "firefox" ] $ws2
 assign [class = "Org.gnome.Nautilus"] $ws4
 assign [class = "vlc" ] $ws5
+assign [class = "Eog" ] $ws6
 assign [class = "TelegramDesktop" ] $ws8
-assign [class = "spotify" ] $ws9
-assign [class = "Gnome-control-center" ] $ws10
+assign [class = "Evince"  ] $ws9
+assign [class = "discord" ] $ws10
+
 
 for_window [class = Alacritty ] focus
 for_window [class = firefox ] focus
@@ -151,7 +153,10 @@ for_window [class = Code ] focus
 for_window [class = Org.gnome.Nautilus ] focus
 for_window [class = vlc ] focus
 for_window [class = Gnome-control-center ] focus
+for_window [class = Evince ] focus
 for_window [class = TelegramDesktop ] focus
+for_window [class = Eog ] focus
+for_window [class = discord ] focus
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1
