--- a/.config/i3/config
+++ b/.config/i3/config
@@ -114,7 +114,7 @@ bindsym $mod+a focus parent
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1: Terminal"
-set $ws2 "2: Firefox"
+set $ws2 "2: Librewolf"
 set $ws3 "3: VSCode"
 set $ws4 "4: Files"
 set $ws5 "5: Vlc Player"
@@ -138,7 +138,7 @@ bindsym $mod+0 workspace number $ws10
 
 assign [class = "Alacritty" ] $ws1
 assign [class = "Code" ] $ws3
-assign [class = "firefox" ] $ws2
+assign [class = "librewolf" ] $ws2
 assign [class = "Org.gnome.Nautilus"] $ws4
 assign [class = "vlc" ] $ws5
 assign [class = "Eog" ] $ws6
@@ -148,7 +148,7 @@ assign [class = "discord" ] $ws10
 
 
 for_window [class = Alacritty ] focus
-for_window [class = firefox ] focus
+for_window [class = librewolf ] focus
 for_window [class = Code ] focus
 for_window [class = Org.gnome.Nautilus ] focus
 for_window [class = vlc ] focus
