--- a/.config/i3/config
+++ b/.config/i3/config
@@ -204,6 +204,22 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
+
+set $bg-color 	         #2f343f
+set $inactive-bg-color   #2f343f
+set $text-color          #f3f4f5
+set $inactive-text-color #676E7D
+set $urgent-bg-color     #E53935
+
+# window colors
+#                       border              background         text                 indicator
+client.focused          $bg-color           $bg-color          $text-color          #2f343f
+client.unfocused        $inactive-bg-color $inactive-bg-color $inactive-text-color #2f343f
+client.focused_inactive $inactive-bg-color $inactive-bg-color $inactive-text-color #2f343f
+client.urgent           $urgent-bg-color    $urgent-bg-color   $text-color          #2f343f
+
+
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
