--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -1,8 +1,5 @@
-# i3blocks config file
-#
-# Please see man i3blocks for a complete reference!
-# The man page is also hosted at http://vivien.github.io/i3blocks
-#
+
+
 # List of valid properties:
 #
 # align
@@ -23,38 +20,39 @@
 # Global properties
 #
 # The top properties below are applied to every block, but can be overridden.
-# Each block command defaults to the script name to avoid boilerplate.
-command=/usr/share/i3blocks/$BLOCK_NAME
-separator_block_width=15
-markup=none
-
-# Volume indicator
-#
-# The first parameter sets the step (and units to display)
-# The second parameter overrides the mixer selection
-# See the script for details.
-[volume]
-label=VOL
-#label=♪
-instance=Master
-#instance=PCM
-interval=1
-signal=10
-command=/usr/share/i3blocks/volume 5 pulse
-
-# Memory usage
-#
-# The type defaults to "mem" if the instance is not specified.
-[memory]
-label=MEM
 separator=false
-interval=30
+markup=pango
 
-[memory]
-label=SWAP
-instance=swap
-separator=false
-interval=30
+#[Weather]
+#command=~/.config/i3/scripts/openweather
+# or:
+#command=~/.config/i3/scripts/openweather-city
+#interval=1800
+#color=#7275b3
+
+[terminal]
+full_text= 
+color=#807dfe
+command=i3-msg -q exec xfce4-terminal
+
+[browser]
+full_text= 
+color=#ff7f81
+command=i3-msg -q exec firefox
+
+#[files]
+#full_text= 
+#color=#7f3fbf
+#command=i3-msg -q exec thunar ~/
+
+#[mail]
+#full_text= 
+#color=#dbcb75
+#command=i3-msg -q exec thunderbird
+
+#[simple-2]
+#full_text=: :
+#color=#717171
 
 # Disk usage
 #
@@ -62,92 +60,103 @@ interval=30
 # The script may be called with a optional argument to set the alert
 # (defaults to 10 for 10%).
 [disk]
-label=HOME
-#instance=/mnt/data
-interval=30
+#label=disk:
+#instance=/
+#command=~/.config/i3/scripts/disk
+#interval=30
 
-# Network interface monitoring
+# Memory usage
 #
-# If the instance is not specified, use the interface used for default route.
-# The address can be forced to IPv4 or IPv6 with -4 or -6 switches.
-[iface]
-#instance=wlan0
-color=#00FF00
-interval=10
-separator=false
+# The type defaults to "mem" if the instance is not specified.
+#[memory]
+#label=
+#command=~/.config/i3/scripts/memory
+#interval=2
 
-[wifi]
-#instance=wlp3s0
-interval=10
-separator=false
-
-[bandwidth]
-#instance=eth0
-interval=5
-
-# CPU usage
-#
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
 [cpu_usage]
 label=CPU
-interval=10
-min_width=CPU: 100.00%
-#separator=false
+command=~/.config/i3/scripts/cpu_usage
+#min_width=CPU: 100.00%
+interval=2
 
-#[load_average]
-#interval=10
+[CPU-temperature]
+label=TEMP
+command=~/.config/i3/scripts/temperature
+interval=20
+#T_WARN=70
+#T_CRIT=90
+#SENSOR_CHIP=""
+# where SENSOR_CHIP can be find with sensors output
+# can be used also for GPU temperature or other temperature sensors lm-sensors detects.
 
+# showing name of connected network (enable for wifi use)
+#[net]
+#label=
+#command=echo "$(LANG=C nmcli d | grep connected  | awk '{print $4}')"
+#interval=30
+
+[bandwidth]
+command=~/.config/i3/scripts/bandwidth2
+interval=persist
+separator=false
 # Battery indicator
-#
-# The battery instance defaults to 0.
 [battery]
-label=BAT
-#label=⚡
-#instance=1
+command=~/.config/i3/scripts/battery2
+# for alternative battery script  change to battery1
+# change this to battery-pinebook-pro if you are running on pinebook-pro
+label=
 interval=30
+separator=false
 
-# Date Time
-#
-[time]
-command=date '+%Y-%m-%d %H:%M:%S'
+[simple-2]
+full_text=: :
+color=#717171
+
+[pavucontrol]
+full_text=VOL
+command=pavucontrol
+
+[volume-pulseaudio]
+command=~/.config/i3/scripts/volume
+instance=Master
 interval=1
-# Generic media player support
-#
-# This displays "ARTIST - SONG" if a music is playing.
-# Supported players are: spotify, vlc, audacious, xmms2, mplayer, and others.
-#[mediaplayer]
-#instance=spotify
-#interval=5
-#signal=10
+separator=false
 
-# OpenVPN support
-#
-# Support multiple VPN, with colors.
-#[openvpn]
-#interval=20
 
-# Temperature
-#
-# Support multiple chips, though lm-sensors.
-# The script may be called with -w and -c switches to specify thresholds,
-# see the script for details.
-#[temperature]
-#label=TEMP
-#interval=10
+# display keyboard layout name
+# for keyboard layouts switcher
+# see i3 config file
+# this needs xkblayout-state installed from the AUR:
+# https://aur.archlinux.org/packages/xkblayout-state-git
+#[keyboard-layout]
+#command=~/.config/i3/scripts/keyboard-layout
+#interval=2
 
-# Key indicators
-#
-# Add the following bindings to i3 config file:
-#
-# bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
-# bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
-#[keyindicator]
-#instance=CAPS
-#interval=once
-#signal=11
+#[keybindings]
+#full_text=
+#command=~/.config/i3/scripts/keyhint
 
-#[keyindicator]
-#instance=NUM
-#interval=once
-#signal=11
+#set power-profile
+[ppd_menu]
+full_text=PROFILES
+command=~/.config/i3/scripts/power-profiles
+#color=#407437
+separator=false
+
+#Show the current power-profile
+[ppd-status]
+command=~/.config/i3/scripts/ppd-status
+interval=5
+
+[time]
+#label=
+command=date '+%a %d %b %H:%M:%S'
+interval=1
+
+[shutdown_menu]
+full_text=
+command=~/.config/i3/scripts/powermenu
+
+[simple-2]
+full_text=: :
+color=#717171
