--- a/.config/i3/config
+++ b/.config/i3/config
@@ -465,8 +465,8 @@ set $yellowbrown	#e1b700
 
 # define colors for windows:
 #class		        	border		bground		text		indicator	child_border
-client.focused		    $lightblue	$darkblue	$white		$purple		$mediumgrey
-client.unfocused	    $darkblue	$darkblue	$grey		$purple		$darkgrey
+client.focused		    $lightblue	$darkblue	$white		$purple		$darkgrey
+client.unfocused	    $darkblue	$darkblue	$grey		$purple		$black
 client.focused_inactive	$darkblue	$darkblue	$grey		$purple		$black
 client.urgent		    $urgentred	$urgentred	$white		$purple		$yellowbrown
 
@@ -477,29 +477,29 @@ client.urgent		    $urgentred	$urgentred	$white		$purple		$yellowbrown
 # Start i3bar to display a workspace bar
 # (plus the system information i3status finds out, if available)
 bar {
-		font pango: Noto Sans Regular 10
+		font pango: Noto Sans Regular 8 
 		status_command i3blocks -c ~/.config/i3/i3blocks.conf
 	    	position bottom
 #	    	i3bar_command i3bar --transparency
 # it could be that you have no primary display set: set one (xrandr --output <output> --primary)
 # reference: https://i3wm.org/docs/userguide.html#_tray_output
 		    tray_output primary
-		    tray_padding 0
+		    tray_padding 0  
 
 # When strip_workspace_numbers is set to yes,
 # any workspace that has a name of the form
 # “[n][:][NAME]” will display only the name.
-strip_workspace_numbers yes
+strip_workspace_numbers no 
 ##strip_workspace_name no
 
 		    colors {
 		    separator          $purple
-		    background         $darkgrey
+		    background         $black
 		    statusline         $white
 #                          		border 		        bg		txt		indicator
-		focused_workspace	$mediumgrey	   	$grey		$darkgrey	$purple
+		focused_workspace       #285577	         	#285577	        $white         	$purple
 		active_workspace	$lightblue      	$mediumgrey	$darkgrey	$purple
-		inactive_workspace	$darkgrey   		$darkgrey	$grey		$purple
+		inactive_workspace	#2B2B2B   		#2B2B2B         $grey   	$purple
 		urgent_workspace	$urgentred	    	$urgentred	$white		$purple
 	}
 }
