--- a/.config/i3/i3blocks.conf
+++ b/.config/i3/i3blocks.conf
@@ -33,7 +33,7 @@ markup=pango
 [terminal]
 full_text= 
 color=#807dfe
-command=i3-msg -q exec xfce4-terminal
+command=i3-msg -q exec alacritty 
 
 [browser]
 full_text= 
@@ -80,7 +80,7 @@ command=~/.config/i3/scripts/cpu_usage
 interval=2
 
 [CPU-temperature]
-label=TEMP
+#label=TEMP
 command=~/.config/i3/scripts/temperature
 interval=20
 #T_WARN=70
