--- a/.config/i3/config
+++ b/.config/i3/config
@@ -465,7 +465,7 @@ set $yellowbrown	#e1b700
 
 # define colors for windows:
 #class		        	border		bground		text		indicator	child_border
-client.focused		    $lightblue	$darkblue	$white		$purple		$darkgrey
+client.focused		    $lightblue	$darkblue	$white		$darkgrey		$darkgrey
 client.unfocused	    $darkblue	$darkblue	$grey		$purple		$black
 client.focused_inactive	$darkblue	$darkblue	$grey		$purple		$black
 client.urgent		    $urgentred	$urgentred	$white		$purple		$yellowbrown
