--- a/.config/i3/config
+++ b/.config/i3/config
@@ -183,8 +183,8 @@ bindsym F1 exec ~/.config/i3/scripts/keyhint-2
 # bindsym $mod+F1 exec xed ~/.config/i3/keybindings
 
 # Backlight control
-bindsym XF86MonBrightnessUp exec xbacklight +1 && notify-send "Brightness - $(xbacklight -get | cut -d '.' -f 1)%"
-bindsym XF86MonBrightnessDown exec xbacklight -1 && notify-send "Brightness - $(xbacklight -get | cut -d '.' -f 1)%"
+bindsym XF86MonBrightnessUp exec xbacklight +0.5 && notify-send "Brightness - $(xbacklight -get | cut -d '.' -f 0.5)%"
+bindsym XF86MonBrightnessDown exec xbacklight -0.5 && notify-send "Brightness - $(xbacklight -get | cut -d '.' -f 0.5)%"
 
 # change focus
 bindsym $mod+j focus left
@@ -309,6 +309,9 @@ for_window [class=code] focus
 for_window [class=vlc] focus
 for_window [class=feh] focus
 for_window [class=TelegramDesktop] focus
+
+#full screen windows
+for_window [class="code"] fullscreen enable
 
 ##############
 # compositor #
@@ -552,11 +555,16 @@ bindsym $mod+d exec rofi -modi drun -show drun \
 bindsym $mod+t exec rofi -show window \
 		-config ~/.config/rofi/rofidmenu.rasi
 
+bindsym $mod+Shift+d exec rofi -show emoji 
+
+
 #bindsym F10 exec rofi -show window \
 #		-config ~/.config/rofi/rofidmenu.rasi
 
-## rofi bindings to manage clipboard (install rofi-greenclip from the AUR)
+
 
 #exec --no-startup-id greenclip daemon>/dev/null
 #bindsym $mod+c exec --no-startup-id rofi -modi "clipboard:greenclip print" -show clipboard \
 #		-config ~/.config/rofi/rofidmenu.rasi
+
+
