--- a/.config/i3/config
+++ b/.config/i3/config
@@ -373,7 +373,7 @@ exec --no-startup-id dex --autostart --environment i3
 exec --no-startup-id ~/.screenlayout/monitor.sh
 
 # set wallpaper
-exec --no-startup-id sleep 2 && nitrogen --restore
+exec --no-startup-id sleep 0 && nitrogen --restore
 #exec --no-startup-id feh --bg-fill /usr/share/endeavouros/backgrounds/copy.jpg 
 
 # set powersavings for display:
@@ -568,3 +568,4 @@ bindsym $mod+Shift+d exec rofi -show emoji
 #		-config ~/.config/rofi/rofidmenu.rasi
 
 
+exec --no-startup-id xbacklight -2.5 && notify-send "Brightness - $(xbacklight -get | cut -d '.' -f 0.5)%"
