--- a/.config/i3/config
+++ b/.config/i3/config
@@ -273,7 +273,7 @@ bindsym $mod+Shift+p exec ~/.config/i3/scripts/power-profiles
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1: Terminal "
-set $ws2 "2: Firefox"
+set $ws2 "2: Browser"
 set $ws3 "3: VSCode"
 set $ws4 "4: Files"
 set $ws5 "5: Media Player"
@@ -295,6 +295,7 @@ set $ws10 "10 Image Viewer:"
 # bind program to workspace and focus to them on startup:
 assign [class="Alacritty"] $ws1
 assign [class="(?i)firefox"] $ws2
+assign [class="Chromium"] $ws2
 assign [class="code"] $ws3
 assign [class="Thunar"] $ws4
 assign [class="vlc"] $ws5
@@ -307,6 +308,7 @@ assign [class="Gthumb"] $ws9
 # automatic set focus new window if it opens on another workspace then the current:
 for_window [class=Alacritty] focus
 for_window [class=(?i)firefox] focus
+for_window [class=Chromium] focus
 for_window [class=Thunar] focus
 for_window [class=code] focus
 for_window [class=vlc] focus
