Added evince as fullscreen window

--- a/i3/config
+++ b/i3/config
@@ -319,8 +319,8 @@ for_window [class=Evince] focus
 for_window [class=Gthumb] focus
 
 #full screen windows
-for_window [class="code"] fullscreen enable
-
+#for_window [class="code"] fullscreen enable
+for_window [class="Evince"] fullscreen enable
 ##############
 # compositor #
 ##############
