--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -108,7 +108,7 @@ font:
     #   - (Linux) monospace
     #   - (Windows) Consolas
     #family: Curie
-     family: Source Code Pro
+     family: monospace
     # The `style` can be specified to pick a specific face.
     #style: Retina
 
@@ -118,7 +118,7 @@ font:
     #
     # If the bold family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Source Code Pro 
+    family: monospace 
 
     # The `style` can be specified to pick a specific face.
     style: Bold
@@ -129,7 +129,7 @@ font:
     #
     # If the italic family is not specified, it will fall back to the
     # value specified for the normal font.
-    family: Source Code Pro
+    family: monospace 
 
     # The `style` can be specified to pick a specific face.
     style: Italic
@@ -163,7 +163,7 @@ font:
   #
   # This is a global setting and will require a log out or restart to take
   # effect.
-  use_thin_strokes: true
+  # use_thin_strokes: true
 
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
