--- a/i3/config
+++ b/i3/config
@@ -38,7 +38,7 @@ new_window pixel 1
 # hide_edge_borders both
 
 # Set inner/outer gaps
-#gaps inner 0 
+#gaps inner 2 
 #gaps outer 0 
 
 # show window title bars (not officially supported with i3gaps)
@@ -316,7 +316,7 @@ assign [class="feh"] $ws6
 assign [class="Spotify"] $ws7
 assign [class="TelegramDesktop"] $ws8
 assign [class="Evince"] $ws9
-assign [class="Gthumb"] $ws10
+assign [class="Eog"] $ws10
 
 # automatic set focus new window if it opens on another workspace then the current:
 for_window [class=Alacritty] focus
@@ -330,7 +330,7 @@ for_window [class=feh] focus
 for_window [class=Spotify] focus
 for_window [class=TelegramDesktop] focus
 for_window [class=Evince] focus
-for_window [class=Gthumb] focus
+for_window [class=Eog] focus
 
 #full screen windows
 #for_window [class="code"] fullscreen enable
