--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -168,25 +168,23 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# ...
-
-# Colors (Wombat)
+#One Dark Colorscheme
 colors:
-  # Default colors
+
   primary:
-    background: '#000000'
+    background: '#282c34'
     foreground: '#D8DEE9'
 
   # Normal colors
   normal:
     black:   '#3B4252'
-    red:     '#BF616A'
-    green:   '#70E000'
-    yellow:  '#EBCB8B'
-    blue:    '#81A1C1'
+    red:     '#e06c75'
+    green:   '#98c379'
+    yellow:  '#e5c07b'
+    blue:    '#61afef'
     magenta: '#B48EAD'
-    cyan:    '#88C0D0'
-    white:   '#E5E9F0'
+    cyan:    '#56b6c2'
+    white:   '#abb2bf'
 
   # Bright colors
   bright:
@@ -197,7 +195,38 @@ colors:
     blue:    '#90E0EF'
     magenta: '#B48EAD'
     cyan:    '#8FBCBB'
-    white:   '#ECEFF4'
+    white:   '#abb2bf'
+
+
+
+# Colors (Wombat)
+# colors:
+#   # Default colors
+#   primary:
+#     background: '#000000'
+#     foreground: '#D8DEE9'
+
+#   # Normal colors
+#   normal:
+#     black:   '#3B4252'
+#     red:     '#BF616A'
+#     green:   '#70E000'
+#     yellow:  '#EBCB8B'
+#     blue:    '#81A1C1'
+#     magenta: '#B48EAD'
+#     cyan:    '#88C0D0'
+#     white:   '#E5E9F0'
+
+#   # Bright colors
+#   bright:
+#     black:   '#4C566A'
+#     red:     '#BF616A'
+#     green:   '#70E000'
+#     yellow:  '#EBCB8B'
+#     blue:    '#90E0EF'
+#     magenta: '#B48EAD'
+#     cyan:    '#8FBCBB'
+#     white:   '#ECEFF4'
 
   # Indexed Colors
   #
