Added postman to workspace 6

--- a/i3/config
+++ b/i3/config
@@ -289,7 +289,7 @@ set $ws2 "2: Browser"
 set $ws3 "3: VSCode"
 set $ws4 "4: Files"
 set $ws5 "5: Media Player"
-set $ws6 "6: Image Viewer"
+set $ws6 "6: Postman"
 set $ws7 "7: Spotify"
 set $ws8 "8: Telegram Desktop"
 set $ws9 "9: Pdf Reader"
@@ -312,7 +312,7 @@ assign [class="Code"] $ws3
 assign [class="Pcmanfm"] $ws4
 assign [class="vlc"] $ws5
 assign [class="mpv"] $ws5
-assign [class="feh"] $ws6
+assign [class="Postman"] $ws6
 assign [class="Spotify"] $ws7
 assign [class="TelegramDesktop"] $ws8
 assign [class="Evince"] $ws9
