Fixed workspace 6 issue

--- a/i3/config
+++ b/i3/config
@@ -326,7 +326,7 @@ for_window [class=Pcmanfm] focus
 for_window [class=Code] focus
 for_window [class=vlc] focus
 for_window [class=mpv] focus
-for_window [class=feh] focus
+for_window [class=Postman] focus
 for_window [class=Spotify] focus
 for_window [class=TelegramDesktop] focus
 for_window [class=Evince] focus
