enabled picom and added default configuration , not working

--- a/i3/config
+++ b/i3/config
@@ -8,7 +8,6 @@
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 font pango: Noto Sans Regular 10
-
 # set the mod key to the winkey:
 set $mod Mod4
 
@@ -362,7 +361,7 @@ for_window [class="Evince"] fullscreen enable
 #exec_always --no-startup-id picom -b
 #
 # for custom config:
-#exec_always --no-startup-id picom --config  ~/.config/picom.conf
+exec_always --no-startup-id picom --config  ~/.config/picom.conf
 
 #############################################
 # autostart applications/services on login: #
