--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -1,7 +1,7 @@
 window:
   dimensions:
-    columns: 100
-    lines: 20
+    columns: 120
+    lines: 22
 
   # by DPI and the specified value is always added at both opposing sides.
   padding:
@@ -31,7 +31,8 @@ font:
   # Normal (roman) font face
   normal:
     #family: Curie
-    family: monospace
+    #family: monospace
+    family: JetBrainsMono
   # Bold font face
   bold:
     # Font family
