updated config to change workspace 3 from vs codium to obsidian

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -176,7 +176,7 @@ bindsym Print exec scrot ~/Pictures/screenshots/%Y-%m-%d-%T-screenshot.png && no
 # We use variables to avoid repeating the names in multiple places.
 set $ws1 "1: Terminal "
 set $ws2 "2: Browser" 
-set $ws3 "3: VS Codium"
+set $ws3 "3: Obsidian"
 set $ws4 "4: Files"
 set $ws5 "5: Media Player"
 set $ws6 "6: Firefox"
@@ -197,7 +197,7 @@ set $ws10 "10: Image Viewer"
 assign [class="Alacritty"] $ws1
 assign [class="(?i)Chromium"] $ws2 
 assign [class="firefox"] $ws2
-assign [class="VSCodium"] $ws3
+assign [class="obsidian"] $ws3
 assign [class="Thunar"] $ws4
 assign [class="vlc"] $ws5
 #assign [class="mpv"] $ws5
@@ -211,7 +211,7 @@ for_window [class=Alacritty] focus
 for_window [class=Chromium] focus
 for_window [class=firefox] focus
 for_window [class=Thunar] focus
-for_window [class=VSCodium] focus
+for_window [class=obsidian] focus
 for_window [class=vlc] focus
 for_window [class=mpv] focus
 for_window [class=Postman] focus
