Reverted i3 font to monspace

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,4 +1,4 @@
-font pango: JetBrainsMonoNerdFontMono 10 
+font pango: monospace 10 
 #font pango: Noto Sans Regular 10
 # set the mod key to the winkey:
 set $mod Mod4
