--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -26,7 +26,7 @@ draw_bold_text_with_bright_colors = true
 #white = "#abb2bf"
 #yellow = "#EBCB8B"
 black = "#4C566A"
-blue = "#8AADF4"
+#blue = "#8AADF4"
 cyan = "#8BD5CA"
 green = "#A6DA95"
 magenta = "#B7BDF8"
