updated kanata config to remap caps key and tab key. updated tmux config to use tpm, changed bindings to vi and changed indexing to start from 1 and some other changes. updated alacritty config to reflect new options

--- a/.config/alacritty/alacritty.toml
+++ b/.config/alacritty/alacritty.toml
@@ -1,9 +1,9 @@
-import = [
+general.import = [
   "~/dotfiles/.config/alacritty/catppuccin-macchiatto.toml"
 ]
 
 #enable_experimental_conpty_backend = false
-live_config_reload = true
+general.live_config_reload = true
 #"window.dynamic_title" = true
 #"window.opacity" = 0.6
 working_directory = "None"
