--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -1,2 +1,34 @@
-#set vim key bindings
+# reload tmux conf
+unbind r
+bind r source-file ~/.config/tmux/tmux.conf
+
+# change prefix from Ctrl + B to Ctrl + A
+unbind C-b
+set-option -g prefix C-a
+bind-key C-a send-prefix
+
+# enable mouse mode
+set -g mouse on
+
+# start counting pane and window number from 1
+set -g base-index 1
+setw -g pane-base-index 1
+
+# increase history limit
+set-option -g history-limit 5000
+# renumbering windows on window close
+set -g renumber-windows on
+
+# set vim key bindings
 set -g mode-keys vi
+bind-key h select-pane -L
+bind-key j select-pane -D
+bind-key k select-pane -U
+bind-key l select-pane -R
+
+# tmux plugin manager
+# List of plugins
+set -g @plugin 'tmux-plugins/tpm'
+set -g @plugin 'christoomey/vim-tmux-navigator'
+
+run '~/.tmux/plugins/tpm/tpm'
