--- a/.config/tmux/tmux.conf
+++ b/.config/tmux/tmux.conf
@@ -14,6 +14,9 @@ set -g mouse on
 set -g base-index 1
 setw -g pane-base-index 1
 
+# make status bar color transparent
+set -g status-style fg=default,bg=default 
+
 # increase history limit
 set-option -g history-limit 5000
 # renumbering windows on window close
@@ -26,9 +29,6 @@ bind-key j select-pane -D
 bind-key k select-pane -U
 bind-key l select-pane -R
 
-# tmux plugin manager
-# List of plugins
-set -g @plugin 'tmux-plugins/tpm'
-set -g @plugin 'christoomey/vim-tmux-navigator'
-
-run '~/.tmux/plugins/tpm/tpm'
+# plugins
+run-shell ~/dev/tmux-yank/yank.tmux
+run-shell ~/dev/tmux-resurrect/resurrect.tmux
